# Uncalibrated-Photometric-Stereo

./: CMakeLists.txt  README.md
images/: export.stl
src/: main.cpp
