CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Uncalibrated-Photometric-Stereo)

# required packages
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

FILE(GLOB SOURCES src/*.cpp src/*.h)
ADD_EXECUTABLE(main ${SOURCES})
TARGET_LINK_LIBRARIES(main ${OpenCV_LIBS} ${VTK_LIBRARIES})
